Update settings fully working
